fix centering and letter spacing on header and add animation to name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,14 +19,14 @@ h1,h2,h3,h4,h5,h6,p,a {
   padding: 0px;
   margin: 0px;
 }
-// html,body
-// {
-//     width: 100%;
-//     height: 100%;
-//     margin: 0px;
-//     padding: 0px;
-//     overflow-x: hidden;
-// }
+html,body
+{
+    width: 100%;
+
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
 body {
 
@@ -47,14 +47,19 @@ body {
       text-align: center;
       vertical-align: middle;
       margin: 0 auto;
-      // background-color:rgba(0, 0, 0, 0.71);
+
       padding: 15px 0px;
       display:none;
       color:grey;
+
+      #l1, #l2,#l3,#l4,#l5,#l6,#l7,#l8,#l9,#l10 {
+        display:none;
+      }
+
       h1 {
 
-        letter-spacing: 9px;
-        font-size: 9rem;
+        letter-spacing: 6px;
+        font-size: 8rem;
         font-weight:lighter;
       }
     }
@@ -359,6 +364,7 @@ body {
 
 @media screen and (max-width: 800px) {
   body {
+    text-align: center;
 
 
     background-attachment:fixed;
